gcc/testsuite/g++.dg/diagnostic/auto-storage-1.C
// { dg-do compile { target c++98_only } }

void foo()
{
  auto void bar();  // { dg-error "3:storage class .auto. invalid for function" }
}
